added more customizations

--- a/restic.env
+++ b/restic.env
@@ -1,4 +1,12 @@
-export RESTIC_PASSWORD=""
-export RESTIC_REPOSITORY=""
-export RESTIC_CACHEDIR=""
-export RESTIC_FILESFROM=""
+BINARY="/usr/bin/restic"
+CACHE_DIR="/tmp/.restic"
+FILES_FROM="restic.files"
+
+KEEP_LAST=2
+KEEP_DAILY=7
+KEEP_WEEKLY=8
+KEEP_MONTHLY=12
+KEEP_YEARLY=10
+
+export RESTIC_PASSWORD_FILE="restic.pwd"
+export RESTIC_REPOSITORY="sftp:user@host:/home/backup/repo"
